--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation "androidx.activity:activity-compose:1.3.0-alpha03"
+    implementation "androidx.activity:activity-compose:1.3.0-alpha04"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
@@ -78,4 +78,17 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    // Navigation
+    def nav_compose_version = "1.0.0-alpha09"
+    implementation "androidx.navigation:navigation-compose:$nav_compose_version"
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.3.4'
+
+    implementation "dev.chrisbanes.accompanist:accompanist-insets:0.6.2"
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.2"
+
+}
+
+repositories {
+    mavenCentral()
 }
